test_programs/compile_failure/noirc_frontend_tests_resolve_basic_function/src/main.nr

        fn main(x : Field) {
            let y = x + x;
            assert(y == x);
        }
    